# alfred-transmission

./: Cargo.toml  README.md  Transmission.alfredworkflow  alfred-transmission  info.plist
src/: main.rs  torrent.rs  transmission.rs
