[package]
name = "alfred-transmission"
version = "0.1.0"
authors = ["Romain Baumier <baumier.romain@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
alfred = "4.0.1"
byte-unit = "3.0.3"
chrono-humanize = "0.0.11"
chrono = { version = "0.4", features = ["serde"] }
